--- a/Course 2 - Introduction to Deep Learning & Neural Networks with Keras/5_BuildADeepLearningmodel.ipynb
+++ b/Course 2 - Introduction to Deep Learning & Neural Networks with Keras/5_BuildADeepLearningmodel.ipynb
@@ -2,6 +2,63 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax. Perhaps you forgot a comma? (3729501236.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[111], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    Use the Keras library to build a neural network with the following:\u001b[0m\n\u001b[1;37m                                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\"POINT A:\n",
+    "\n",
+    "Use the Keras library to build a neural network with the following:\n",
+    "\n",
+    "- One hidden layer of 10 nodes, and a ReLU activation function\n",
+    "\n",
+    "- Use the adam optimizer and the mean squared error  as the loss function.\n",
+    "\n",
+    "1. Randomly split the data into a training and test sets by holding 30% of the data for testing. You can use the train_test_split\n",
+    "\n",
+    "helper function from Scikit-learn.\n",
+    "\n",
+    "2. Train the model on the training data using 50 epochs.\n",
+    "\n",
+    "3. Evaluate the model on the test data and compute the mean squared error between the predicted concrete strength and the actual concrete strength. You can use the mean_squared_error function from Scikit-learn.\n",
+    "\n",
+    "4. Repeat steps 1 - 3, 50 times, i.e., create a list of 50 mean squared errors.\n",
+    "\n",
+    "5. Report the mean and the standard deviation of the mean squared errors.\n",
+    "\n",
+    "POINT B:\n",
+    "\n",
+    "Repeat Part A but use a normalized version of the data. Recall that one way to normalize the data is by subtracting the mean from the individual predictors and dividing by the standard deviation.\n",
+    "\n",
+    "How does the mean of the mean squared errors compare to that from Step A?\n",
+    "\n",
+    "POINT C:\n",
+    "\n",
+    "Repeat Part B but use 100 epochs this time for training.\n",
+    "\n",
+    "How does the mean of the mean squared errors compare to that from Step B?\n",
+    "\n",
+    "POINT D:\n",
+    "\n",
+    "Repeat part B but use a neural network with the following instead:\n",
+    "\n",
+    "- Three hidden layers, each of 10 nodes and ReLU activation function.\n",
+    "\n",
+    "How does the mean of the mean squared errors compare to that from Step B?\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 91,
    "metadata": {},
    "outputs": [],
